# rust-study

./: README.md  calculator.rs  lib.rs  main.rs
april-code/: Cargo.toml
april-code/src/: calculator.rs  lib.rs  statistics.rs
august-code/: Cargo.toml
august-code/src/: async_db.rs  main.rs  main_modular.rs  main_offline.rs  simple_example.rs  simple_stream.rs  web_server.rs
august-code/src/core/: database.rs  http_client.rs  mod.rs  scheduler.rs  web_server.rs
august-code/src/examples/: basic.rs  batch.rs  mod.rs  offline.rs  stream.rs
august-code/src/tests/: concurrency.rs  error_handling.rs  integration.rs  mod.rs  performance.rs
august-code/src/utils/: config.rs  error.rs  logging.rs  mod.rs  time.rs
february-code/: Cargo.toml
february-code/src/: main.rs  memory_demo.rs  text_analyzer.rs
february-code/src/cache/: cache.rs  mod.rs
february-code/src/text/: mod.rs  (+2 more)
january-code/: Cargo.toml
january-code/src/: main.rs
july-code/: Cargo.toml
july-code/src/: main.rs
june-code/: Cargo.toml
june-code/src/: main.rs
march-code/: Cargo.toml
march-code/src/: main.rs
may-code/: Cargo.toml  example.json
may-code/src/: cli.rs  config.rs  error.rs  main.rs  parser.rs
november-code/: Cargo.toml  README.md
november-code/.github/: copilot-instructions.md
november-code/src/: advanced_traits.rs  declarative_macros.rs  lib.rs  main.rs  utils.rs
october-code/: .gitignore  Cargo.toml  README.md
october-code/benches/: data_processing_bench.rs
october-code/src/: lib.rs  main.rs
september-code/: Cargo.toml
september-code/app/: Cargo.toml
(+21 files in other folders)
